--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  url_launcher: ^6.1.12
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -90,6 +92,14 @@ flutter:
      - assets/apple.jpg
      - assets/biryani.jpg
      - assets/map.png
+     - assets/img1.png
+     - assets/books.png
+     - assets/exercise.png
+     - assets/google_memory.png
+     - assets/location.png
+     - assets/music.png
+     - assets/searchbutton.png
+     - assets/sos.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
